add defaultItems to lobby